# acoustic-analysis-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
api/: main.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/canvas/: draw.js  themeColors.js
frontend/src/components/: AnomalyChart.jsx  AzimuthMiniChart.jsx  AzimuthValuesPanel.jsx  ChartLegend.jsx  DirectionAccuracyChart.jsx  FeatureCharts.jsx  HeatmapChart.jsx  Metrics.jsx  RegionsTable.jsx  Sidebar.jsx  SpectrogramChart.jsx  ThemeIcon.jsx  ThestructRecordsTable.jsx  ThestructView.jsx  WaveformChart.jsx
frontend/src/hooks/: useChartRedraw.js  useTheme.js
frontend/src/styles/: app.css
frontend/src/utils/: azimuth.js  azimuthSlots.js  chartLegend.js  freqAxisScale.js  metrics.js
scripts/: dev.sh
src/acoustic_analysis/: __init__.py  analyzer.py  azimuth.py  direction_accuracy.py  features.py  outliers.py  plots.py  serialize.py  thestruct.py  thestruct_serialize.py
