[project]
name = "acoustic-analysis-dashboard"
version = "0.1.0"
description = "Dashboard for acoustic outlier detection in hearing-aid WAV audio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "librosa>=0.10.2",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
]
dev = ["ruff>=0.4.0"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
